# scraping_tp_ubuntu_rye

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: docker-compose.yml
src/scraping_tp_ubuntu_rye/: __init__.py  config.py  csv_creator.py  scraping_tp.py  settings.json
