[project]
name = "scraping-tp-ubuntu-rye"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Unknown" }
]
dependencies = [
    "dynaconf>=3.2.6",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "requests-file>=2.1.0",
    "fake-useragent>=1.5.1",
    "selenium>=4.23.1",
    "webdriver-manager>=4.0.2",
    "pyvirtualdisplay>=3.0",
    "playwright>=1.45.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.5",
    "pytest>=8.3.2",
    "nuitka>=2.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scraping_tp_ubuntu_rye"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# 5. Use single quotes for non-triple-quoted strings.
quote-style = "single"

[tool.ruff.pydocstyle]
convention = "google"
